--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="css/style.min.css">
+    <script src="js/main.min.js"></script>
     <title>Zveno — Агентство по подбору Digital и IT-профессионалов</title>
   </head>
   <body>
